[gd_scene load_steps=4 format=2]

[ext_resource path="res://Entities/BottomEnemies/Drill.gd" type="Script" id=1]
[ext_resource path="res://Sprites/monochrome_transparent.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5.14964, 13.1098 )

[node name="Drill" type="KinematicBody2D"]
position = Vector2( 0, -10 )
rotation = 3.14159
scale = Vector2( 0.75, 0.75 )
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )
disabled = true

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
hframes = 48
vframes = 22
frame = 600
region_enabled = true
region_rect = Rect2( 0, 0, 815, 373 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false
position = Vector2( -3.8147e-06, -3.09944e-06 )
scale = Vector2( 3.13509, 3.13509 )

[node name="DamageArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
position = Vector2( 0.187073, 1.45478 )
shape = SubResource( 1 )

[node name="MoveTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="PreparationTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="body_entered" from="DamageArea" to="." method="_on_DamageArea_body_entered"]
[connection signal="timeout" from="MoveTimer" to="." method="_on_MoveTimer_timeout"]
